<resources>
    <string name="app_name">Simple Advanced Apps</string>
    <string name="none_display">There are no items to display</string>
    <string name="hint_text_breeds">Breeds list</string>
    <string name="dogs">photo dogs</string>
    <string-array name="breeds_list">
        
        <item>Affenpinscher</item>
        <item>African</item>
        <item>Airedale</item>
        <item>Akita</item>
        <item>Appenzeller</item>
        <item>Australian Shepherd</item>
        
        <item>Basenji</item>
        <item>Beagle</item>
        <item>Bluetick</item>
        <item>Borzoi</item>
        <item>Bouvier</item>
        <item>Boxer</item>
        <item>Brabancon</item>
        <item>Briard</item>
        <item>Buhund Norwegian</item>
        <item>Bulldog Boston</item>
        <item>Bulldog English</item>
        <item>Bulldog French</item>
        <item>Bullterrier Staffordshire</item>
        
        <item>Cattledog Australian</item>
        <item>Chihuahua</item>
        <item>Chow</item>
        <item>Clumber</item>
        <item>Cockapoo</item>
        <item>Collie Border</item>
        <item>Coonhound</item>
        <item>Corgi Cardigan</item>
        <item>Cotondetulear</item>
        
        <item>Dachshund</item>
        <item>Dalmatian</item>
        <item>Dane Great</item>
        <item>Deerhound Scottish</item>
        <item>Dhole</item>
        <item>Dingo</item>
        <item>Doberman</item>
        
        <item>Elkhound Norwegian</item>
        <item>Entlebucher</item>
        <item>Eskimo</item>
        
        <item>Finnish Lapphund</item>
        <item>Frise Bichon</item>
        
        <item>Germanshepherd</item>
        <item>Golden</item>
        <item>Greyhound Italian</item>
        <item>Groenendael</item>
        
        <item>Havanese</item>
        <item>Hound Afghan</item>
        <item>Hound Basset</item>
        <item>Hound Blood</item>
        <item>Hound English</item>
        <item>Hound Ibizan</item>
        <item>Hound Plott</item>
        <item>Hound Walker</item>
        <item>Husky</item>
        
        <item>Keeshond</item>
        <item>Kelpie</item>
        <item>Komondor</item>
        <item>Kuvasz</item>
        
        <item>Labradoodle</item>
        <item>Labrador</item>
        <item>Leonberg</item>
        <item>Lhasa</item>
        
        <item>Malamute</item>
        <item>Malinois</item>
        <item>Maltese</item>
        <item>Mastiff Bull</item>
        <item>Mastiff English</item>
        <item>Mastiff Tibetan</item>
        <item>Mexicanhairless</item>
        <item>Mix</item>
        <item>Mountain Bernese</item>
        <item>Mountain Swiss</item>
        
        <item>Newfoundland</item>
        
        <item>Otterhound</item>
        <item>Ovcharka Caucasian</item>
        
        <item>Papillon</item>
        <item>Pekinese</item>
        <item>Pembroke</item>
        <item>Pinscher Miniature</item>
        <item>Pitbull</item>
        <item>Pointer German</item>
        <item>Pointer Germanlonghair</item>
        <item>Pomeranian</item>
        <item>Poodle Medium</item>
        <item>Poodle Miniature</item>
        <item>Poodle Standard</item>
        <item>Poodle Toy</item>
        <item>Pug</item>
        <item>Puggle</item>
        <item>Pyrenees</item>
        
        <item>Redbone</item>
        <item>Retriever Chesapeake</item>
        <item>Retriever Curly</item>
        <item>Retriever Flatcoated</item>
        <item>Retriever Golden</item>
        <item>Ridgeback Rhodesian</item>
        <item>Rottweiler</item>
        
        <item>Saluki</item>
        <item>Samoyed</item>
        <item>Schipperke</item>
        <item>Schnauzer Giant</item>
        <item>Schnauzer Miniature</item>
        <item>Segugio Italian</item>
        <item>Setter English</item>
        <item>Setter Gordon</item>
        <item>Setter Irish</item>
        <item>Sharpei</item>
        <item>Sheepdog English</item>
        <item>Sheepdog Shetland</item>
        <item>Shiba</item>
        <item>Shihtzu</item>
        <item>Spaniel Blenheim</item>
        <item>Spaniel Brittany</item>
        <item>Spaniel Cocker</item>
        <item>Spaniel Irish</item>
        <item>Spaniel Japanese</item>
        <item>Spaniel Sussex</item>
        <item>Spaniel Welsh</item>
        <item>Springer English</item>
        <item>Stbernard</item>
        
        <item>Terrier America</item>
        <item>Terrier Australia</item>
        <item>Terrier Bedlington</item>
        <item>Terrier Borde</item>
        <item>Terrier Cairn</item>
        <item>Terrier Dandi</item>
        <item>Terrier Fox</item>
        <item>Terrier Irish</item>
        <item>Terrier Kerryblue</item>
        <item>Terrier Lakeland</item>
        <item>Terrier Norfolk</item>
        <item>Terrier Norwich</item>
        <item>Terrier Patterdale</item>
        <item>Terrier Russell</item>
        <item>Terrier Scottish</item>
        <item>Terrier Sealyham</item>
        <item>Terrier Silky</item>
        <item>Terrier Tibetan</item>
        <item>Terrier Toy</item>
        <item>Terrier Welsh</item>
        <item>Terrier Westhighland</item>
        <item>Terrier Wheaten</item>
        <item>Terrier Yorkshire</item>
        <item>Tervuren</item>
        
        <item>Vizsla</item>
        
        <item>Waterdog Spanis</item>
        <item>Weimaraner</item>
        <item>Whippet</item>
        <item>Wolfhound Irish</item>
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="dot">.</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="error_message">An unknown error occurred.</string>
    <string name="hint_search">Enter your word</string>
    <string name="button_find">find</string>
    <string name="pokemon_image">Pokémon Image</string>
    <string name="type">Type :</string>
    <string name="hp">Hp :</string>
    <string name="speed">Speed :</string>
    <string name="attack">Attack :</string>
    <string name="defense">Defense :</string>
    <string name="special_attack">Special Attack :</string>
    <string name="special_defense">Special Defense :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="metro"> %sm</string>
    <string name="kilo"> %skg</string>
    <string name="movies">Movies</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="details_movie">Details Movie</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="search_et">Search by name or series</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="name">Name :</string>
    <string name="dagger_hilt">Dagger-Hilt :</string>
    <string name="navigation">Navigation :</string>
    <string name="room">Room :</string>
    <string name="coroutines">Coroutines :</string>
    <string name="app_features_mvvm">App Features - MVVM</string>
    <string name="error">Error!</string>
    <string name="country_language">Country Language :</string>
    <string name="country_name">Country Name :</string>
    <string name="country_capital">Country Capital :</string>
    <string name="country_region">Country Region :</string>
    <string name="country_currency">Country Currency :</string>
    <string name="character">Character</string>
    <string name="location">Location</string>
    <string name="episode">Episode</string>
    <string name="last_know_location">Last know location :</string>
    <string name="gender">Gender :</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="categories">Categories</string>
    <string name="instructions">Instructions :</string>
    <string name="category_placeholder">Category: %1$s</string>
    <string name="area_placeholder">Area: %1$s</string>
    <string name="meal_removed">Meal removed from favorites</string>
    <string name="meal_saved">Meal is saved</string>
    <string name="meal_deleted">Meal deleted</string>
    <string name="undo">Undo</string>
    <string name="category_meals_count">%1$s ( %2$d )</string>
    <string name="everything">Everything</string>
    <string name="top_articles">Top Articles</string>
    <string name="date_weather">23/07/2022</string>
    <string name="city_weather">Chicago</string>
    <string name="c_weather">23°C</string>
    <string name="c_c_weather">34°C/23°C</string>
    <string name="status_weather">Sunny</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="day_weather">Monday 23/07/2022</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="city_name_hint">City name:</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dialog_delete_title">Confirm Deletion</string>
    <string name="dialog_delete_message_tasks">Are you sure you want to delete all completed tasks?</string>
    <string name="dialog_delete_message_notes">Are you sure you want to delete all notes?</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="msg_task_added">Task Added</string>
    <string name="msg_task_updated">Task updated</string>
    <string name="msg_all_completed_tasks_deleted">All completed tasks deleted.</string>
    <string name="msg_task_deleted">Task deleted</string>
    <string name="action_undo">UNDO</string>
    <string name="title_new_task">New Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="msg_note_added">Note added.</string>
    <string name="msg_note_updated">Note updated.</string>
    <string name="msg_all_notes_deleted">All notes deleted.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="important_task">Important Task</string>
    <string name="task">Task</string>
    <string name="empty">Empty</string>
    <string name="_0">0</string>
    <string name="number_placeholder">%1$d</string>
    <string name="countries_from_sqlite">Countries from SQLite</string>
    <string name="countries_from_api">Countries from API</string>
    <string name="symbol_is_missing">Symbol is missing</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="please_enter_a_word">Please enter a word</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_cached_data">No internet and no cached data</string>
    <string name="new_note_title">New Note</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="note_deleted_msg">Note Deleted</string>
    <string name="undo_uppercase">UNDO</string>
    <string name="title_empty_error">Title cannot be empty</string>
    <string name="date_created">Date created: </string>
    <string name="todo">TO-DO</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date_created">Sort by date created</string>
    <string name="more">More</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_completed_tasks">Delete completed tasks</string>
</resources>