<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="?colorError"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:iconTint="?colorError"
        android:title="@string/sort"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_byname"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_bydatecreated"
                android:title="@string/sort_by_date_created" />
        </menu>
    </item>

    <item
        android:id="@+id/action_more_options"
        android:icon="@drawable/ic_more"
        android:iconTint="?colorError"
        android:title="@string/more"
        app:iconTint="?colorError"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_hide_cpmpleted_items"
                android:checkable="true"
                android:title="@string/hide_completed"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_delete_all_comp_tasks"
                android:title="@string/delete_completed_tasks"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>