<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1.2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/clear_history"
            android:fadingEdge="vertical"
            android:requiresFadingEdge="vertical"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/clear_history"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_key"
            android:backgroundTint="?colorError"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_clear_all"
            app:tint="?colorOnBackground" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_place_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ellipsize="start"
        android:gravity="end|bottom"
        android:singleLine="true"
        android:textColor="?colorError"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ellipsize="end"
        android:gravity="end|bottom"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="2"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="?colorOnBackground"
                android:textSize="24sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError">

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_delete"
                    app:tint="?colorOnBackground" />

            </FrameLayout>

            <TextView
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError"
                android:gravity="center"
                android:text="@string/divide"
                android:textColor="?colorOnBackground"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_seven"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_eight"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?trackColor"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_nine"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError"
                android:gravity="center"
                android:text="@string/multiply"
                android:textColor="?colorOnBackground"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_four"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?trackColor"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_five"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_six"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?trackColor"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_minus"
                    app:tint="?colorOnBackground" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_one"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_two"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?trackColor"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/number_three"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError">

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_plus"
                    app:tint="?colorOnBackground" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_zero"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="2"
                android:background="@drawable/bg_key"
                android:backgroundTint="?tickColor"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="?colorOnBackground"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_key"
                android:backgroundTint="?colorError"
                android:gravity="center"
                android:text="@string/equals"
                android:textColor="?colorOnBackground"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>