<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_what_would_you_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/what_would_you_like_to_eat"
                    android:textColor="?colorError"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/random_card_view"
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/image_profile"
                    android:layout_height="@dimen/_160sdp"
                    android:layout_marginHorizontal="10sp"
                    android:layout_marginVertical="10sp"
                    app:cardCornerRadius="10sp" />

                <ImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp"
                    android:layout_marginVertical="10sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/over_popular_items"
                    android:textColor="?colorError"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_popular_meal" />

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/categories"
                    android:textColor="?colorError"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5sp"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/item_category_meal" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>